# os_select_version

./: CMakeLists.txt  client.c  client_request_handler.c  client_request_handler.h  connection_handler.c  connection_handler.h  connection_utilities.c  connection_utilities.h  database.c  database.h  server.c  server_response_parser.c  server_response_parser.h  socket_utilities.c  socket_utilities.h
data_structures/: hashmap.c  hashmap.h  phone_directory.c  phone_directory.h  queue.c  queue.h
fake_data_gen/: data_gen.py
